--- a/config/ap/hostapd.conf
+++ b/config/ap/hostapd.conf
@@ -26,19 +26,19 @@ ht_capab=[HT40][SHORT-GI-20][DSSS_CCK-40]
 macaddr_acl=0
 
 # Use WPA authentication
-auth_algs=1
+#auth_algs=1
 
 # Require clients to know the network name
-ignore_broadcast_ssid=TranslationExchangeAP_AAkVr
+#ignore_broadcast_ssid=TranslationExchangeAP_AAkVr
 
 # Use WPA2
-wpa=2
+#wpa=2
 
 # Use a pre-shared key
-wpa_key_mgmt=WPA-PSK
+#wpa_key_mgmt=WPA-PSK
 
 # The network passphrase
-wpa_passphrase=raspberry
+#wpa_passphrase=raspberry
 
 # Use AES, instead of TKIP
-rsn_pairwise=CCMP
+#rsn_pairwise=CCMP
